--- a/src/bbsearch/_css/stylesheet.css
+++ b/src/bbsearch/_css/stylesheet.css
@@ -19,11 +19,15 @@
 
 /* warnings */
 .bbs_warning {
-    color: #F57C00
+    color: #DDB62C
+}
+
+/* errors */
+.bbs_error {
+    color: #E75C58
 }
 
 /* widgets buttons */
-
 .bbs_button {
     background-color: #3c96f3;
     color: #FFF;
