Improve messages when save / load

--- a/src/bbsearch/_css/stylesheet.css
+++ b/src/bbsearch/_css/stylesheet.css
@@ -17,6 +17,11 @@
     color: #006621;
 }
 
+/* success */
+.bbs_success {
+    color : #388E3B
+}
+
 /* warnings */
 .bbs_warning {
     color: #DDB62C
