[BBS-213] Add Save/Load buttons in notebook (#180)
* Add save/load for Search Widget + Mining Widget
* Test Search Widget + Test Mining Widget

--- a/src/bbsearch/_css/stylesheet.css
+++ b/src/bbsearch/_css/stylesheet.css
@@ -17,9 +17,22 @@
     color: #006621;
 }
 
+/* success */
+.bbs_success {
+    color : #388E3B
+}
+
+/* warnings */
+.bbs_warning {
+    color: #DDB62C
+}
+
+/* errors */
+.bbs_error {
+    color: #E75C58
+}
 
 /* widgets buttons */
-
 .bbs_button {
     background-color: #3c96f3;
     color: #FFF;
